Modular buttons included
Buttons were hard coded, now is a modular reusable button

--- a/camino-app/src/components/header/Header.css
+++ b/camino-app/src/components/header/Header.css
@@ -1,3 +1,15 @@
 .header {
     background-color: black;
 }
+
+button {
+    border-radius: 1ch;
+    width: 100%;
+}
+
+a, a:link, a:visited {
+    color: #000000;
+    text-decoration: none;
+    background-color: #778899;
+    
+  }
