Better impulse on progress
Able to connect to api cards, and now looking to start a node server

--- a/camino-app/src/components/header/Header.css
+++ b/camino-app/src/components/header/Header.css
@@ -13,6 +13,11 @@ button:hover{
     background-color: antiquewhite;
 }
 
+li{
+    text-decoration: none;
+}
+
+
 .hul {
     background-color:azure;
     width: 50%;
