--- a/camino-app/src/components/footer/Footer.css
+++ b/camino-app/src/components/footer/Footer.css
@@ -7,13 +7,15 @@
 
 .grid-container{
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    width: 75%;
-    margin: auto;
+    grid-template-columns: 25% 25% 10% 10%;
 }
 
 .grid-element{
     border: 1px solid rgba(black, black, black, black);
-    text-decoration: none;
     text-align: left;
+    margin: 10%;
+}
+
+li{
+    list-style: none;
 }
